bin_PROGRAMS = benchmark filecrypt hello mpi_demo selftest ssl_client1 \
	       ssl_client2 ssl_server
benchmark_CFLAGS = -I../include
benchmark_LDADD = ../library/libxyssl.a
benchmark_SOURCES = benchmark.c

filecrypt_CFLAGS = -I../include
filecrypt_LDADD = ../library/libxyssl.a
filecrypt_SOURCES = filecrypt.c

hello_CFLAGS = -I../include
hello_LDADD = ../library/libxyssl.a
hello_SOURCES = hello.c

mpi_demo_CFLAGS = -I../include
mpi_demo_LDADD = ../library/libxyssl.a
mpi_demo_SOURCES = mpi_demo.c

selftest_CFLAGS = -I../include
selftest_LDADD = ../library/libxyssl.a
selftest_SOURCES = selftest.c

ssl_client1_CFLAGS = -I../include
ssl_client1_LDADD = ../library/libxyssl.a
ssl_client1_SOURCES = ssl_client1.c

ssl_client2_CFLAGS = -I../include
ssl_client2_LDADD = ../library/libxyssl.a
ssl_client2_SOURCES = ssl_client2.c

ssl_server_CFLAGS = -I../include
ssl_server_LDADD = ../library/libxyssl.a
ssl_server_SOURCES = ssl_server.c
